objects/Lead_Dealer_Assignment_Audit__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ALR_Rule_Applied__c</fullName>
        <label>ALR Rule Applied</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Assignment__c</fullName>
        <formula>IF(Dealer_Assigned__r.Id = Lead__r.Dealer_Locator_Selection__r.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Lead_Dealer Assignment Audit</relationshipLabel>
        <relationshipName>Lead_Dealer_Assignment_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Assigned</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead_Dealer Assignment Audit</relationshipLabel>
        <relationshipName>Lead_Dealer_Assignment_Audit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadCreatedDate__c</fullName>
        <description>Lead Created Date</description>
        <formula>Lead__r.Lead_CreatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Created Date</inlineHelpText>
        <label>LeadCreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Dealer Assignment Audits</relationshipLabel>
        <relationshipName>Lead_Dealer_Assignment_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Dealer Selected Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Dealer Assignment Audit</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Dealer Assignment Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>